<resources>
    <string name="app_name">喂饭团</string>
    <string name="title_activity_main">喂饭团</string>
    <string name="title_activity_history">历史记录</string>
    <string name="title_easy">E.A.S.Y</string>
    <string name="eat">喂奶</string>
    <string name="left">左侧</string>
    <string name="right">右侧</string>
    <string name="milk">奶粉</string>
    <string name="ml">60</string>
    <string name="ok">确定</string>
    <string name="tip">提示</string>
    <string name="now_left">正在喂左侧</string>
    <string name="now_right">正在喂右侧</string>
    <string name="last_end">上次结束:</string>
    <string name="history">历史</string>
    <string name="sleep">睡了</string>
    <string name="wake">醒了</string>
    <string name="sleep_last">睡着啦</string>
    <string name="wake_last">醒着呢</string>
    <string name="shit">拉了</string>
    <string name="last">上次</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="bedelete">正在删除</string>
    <string name="delete">删除</string>
    <string name="statistics">统计</string>
    <string name="body">体征</string>
    <string name="weight">体重</string>
    <string name="height">身高</string>
    <string name="temperature">体温</string>
    <string name="celsius">℃</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="add">补记</string>
    <string name="add_sleep">补记睡眠</string>
    <string name="add_eat">补记喂奶</string>
    <string name="add_shit">补记便便</string>
    <string name="add_body">补记体征</string>
    <string name="no_data">没有数据</string>
</resources>
