<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:paddingEnd="10dp"
        android:gravity="center_vertical|end"
        android:inputType="numberDecimal"
        android:hint="@string/kg"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/et_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:paddingEnd="10dp"
        android:gravity="center_vertical|end"
        android:inputType="numberDecimal"
        android:hint="@string/cm"
        android:textSize="24sp"/>
    <EditText
        android:id="@+id/et_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:paddingEnd="10dp"
        android:gravity="center_vertical|end"
        android:inputType="numberDecimal"
        android:hint="@string/celsius"
        android:textSize="24sp"/>

    <DatePicker
        android:id="@+id/dp_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />
</LinearLayout>
