<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <RadioGroup
        android:id="@+id/rg_eat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left"
            android:textSize="18sp"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rb_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/right"
            android:textSize="18sp"/>
        <RadioButton
            android:id="@+id/rb_milk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/milk"
            android:textSize="18sp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/txt_count_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="00:00"
        android:textSize="24sp"/>
    <EditText
        android:id="@+id/et_ml"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:visibility="gone"
        android:inputType="number"
        android:textSize="24sp"
        android:text="60"
        android:hint="ml"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TimePicker
            android:id="@+id/tp_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:timePickerMode="spinner"/>
        <TextView
            android:id="@+id/txt_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="-"
            android:textSize="48sp"/>
        <TimePicker
            android:id="@+id/tp_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:timePickerMode="spinner"/>
    </LinearLayout>
</LinearLayout>
